new page used with old

--- a/index.html
+++ b/index.html
@@ -4,13 +4,27 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
-  <title>Xcode with netlify</title>
-  <link rel="stylesheet" href="main.css">
+  <title>xcode.no</title>
+  <link rel="stylesheet" href="css/x.css">
+  <link href="https://fonts.googleapis.com/css?family=Montserrat:100,200,300,400,500,600,700" rel="stylesheet">
+  <link rel="stylesheet"
+  href="https://cdn.jsdelivr.net/npm/animate.css@3.5.2/animate.min.css">
 </head>
 <body>
-  <main>
-    <h1>Xcode with netlify</h1>
-    <p>If it works, that's great!</p>
-  </main>
+  <h1 id="logoH1" class="animated flipInX">xCode.no</h1>
+  <p>The new Netlify without server!</p>
+  <!-- flipInX -->
+  <!-- <p class="animated fadeIn slow">Amazing</p> -->
+  <div class="banner">
+    <p id="bannerTxt">&#104;&#101;&#108;&#108;&#111;&#64;&#120;&#99;&#111;&#100;&#101;&#46;&#110;&#111;</p>
+  </div>
+  <div class="rightTop">
+    <p id="dater"></p>
+  </div>
+
+  <script src="js/x.js"></script>
+  <!-- <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script> -->
+
 </body>
+
 </html>
