--- a/notrobot.html
+++ b/notrobot.html
@@ -14,12 +14,12 @@
   <h1 id="logoH1" class="animated flipInX">xCode.no | NOT robot</h1>
   <p>The new Netlify without server!</p>
 
-  <form action="#">
+  <form action="xxx.php" method="get">
     <h2>Google recaptcha tester</h2>
     <input type="text" name="testerx" value="123">
     <label for="testerx"></label>
     <div class="g-recaptcha" data-sitekey="6Lcg1HwUAAAAAI-RSpRwzR9wStmpQtnVsbKF_u6n"></div>
-    <button action="submit" type="button" name="button">Send form</button>
+    <button type="submit" name="button">Send form</button>
   </form>
   <div class="rightTop">
     <p id="dater"></p>
