php will not work on netlify

--- a/index.html
+++ b/index.html
@@ -11,8 +11,11 @@
   href="https://cdn.jsdelivr.net/npm/animate.css@3.5.2/animate.min.css">
 </head>
 <body>
+  <a href="index.html">
   <h1 id="logoH1" class="animated flipInX">xCode.no</h1>
+  </a>
   <p>The new Netlify without server!</p>
+  <a href="notrobot.php">Click here to check out recaptcha form</a>
   <!-- flipInX -->
   <!-- <p class="animated fadeIn slow">Amazing</p> -->
   <div class="banner">
