--- a/notrobot.html
+++ b/notrobot.html
@@ -22,12 +22,8 @@
     <button type="submit" name="button">Send form</button>
   </form>
 
-  <?php
-  if(isset($_GET["g-recaptcha-response"])) {
-    echo "<p>G-recaptcha-response: ". $_GET["g-recaptcha-response"] ."</p>";
-  }
 
-  ?>
+<!-- $_GET["g-recaptcha-response"] -->
   <div class="rightTop">
     <p id="dater"></p>
   </div>
