--- a/notrobot.html
+++ b/notrobot.html
@@ -14,7 +14,7 @@
   <h1 id="logoH1" class="animated flipInX">xCode.no | NOT robot</h1>
   <p>The new Netlify without server!</p>
 
-  <form action="notrobot.php" method="get">
+  <form name contact netlify>
     <h2>Google recaptcha tester</h2>
     <input type="text" name="testerx" value="123">
     <label for="testerx"></label>
