--- a/notrobot.html
+++ b/notrobot.html
@@ -14,13 +14,35 @@
   <h1 id="logoH1" class="animated flipInX">xCode.no | NOT robot</h1>
   <p>The new Netlify without server!</p>
 
-  <form name="contact" method="POST" netlify>
+  <!-- <form name="contact" method="POST" netlify>
     <h2>Google recaptcha tester</h2>
     <input type="text" name="testerx" value="123">
     <label for="testerx"></label>
-    <div class="g-recaptcha" data-sitekey="6Lcg1HwUAAAAAI-RSpRwzR9wStmpQtnVsbKF_u6n"></div>
+
     <button type="submit" name="button">Send</button>
-  </form>
+  </form> -->
+  <!-- <div class="g-recaptcha" data-sitekey="6Lcg1HwUAAAAAI-RSpRwzR9wStmpQtnVsbKF_u6n"></div> -->
+
+  <form name="contact" method="POST" netlify>
+  <p>
+    <label>Your Name: <input type="text" name="name" /></label>
+  </p>
+  <p>
+    <label>Your Email: <input type="email" name="email" /></label>
+  </p>
+  <p>
+    <label>Your Role: <select name="role[]" multiple>
+      <option value="leader">Leader</option>
+      <option value="follower">Follower</option>
+    </select></label>
+  </p>
+  <p>
+    <label>Message: <textarea name="message"></textarea></label>
+  </p>
+  <p>
+    <button type="submit">Send</button>
+  </p>
+</form>
 
 
 <!-- $_GET["g-recaptcha-response"] -->
