--- a/index.html
+++ b/index.html
@@ -14,13 +14,9 @@
   <a href="index.html">
   <h1 id="logoH1" class="animated flipInX">xCode.no</h1>
   </a>
-  <p>The new Netlify without server!</p>
-  <a href="notrobot.php">Click here to check out recaptcha form</a>
-  <!-- flipInX -->
-  <!-- <p class="animated fadeIn slow">Amazing</p> -->
-  <div class="banner">
-    <p id="bannerTxt">&#104;&#101;&#108;&#108;&#111;&#64;&#120;&#99;&#111;&#100;&#101;&#46;&#110;&#111;</p>
-  </div>
+
+  <a href="contact.html" class="banner">Contact</a>
+
   <div class="rightTop">
     <p id="dater"></p>
   </div>
