--- a/index.html
+++ b/index.html
@@ -1,18 +1,18 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <title>xcode.no</title>
   <link rel="stylesheet" href="css/x.css">
-  <link href="https://fonts.googleapis.com/css?family=Montserrat:100,200,300,400,500,600,700" rel="stylesheet">
-  <link rel="stylesheet"
-  href="https://cdn.jsdelivr.net/npm/animate.css@3.5.2/animate.min.css">
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/animate.css@3.5.2/animate.min.css">
 </head>
+
 <body>
   <a href="index.html">
-  <h1 id="logoH1" class="animated flipInX">xCode.no</h1>
+    <h1 id="logoH1" class="animated flipInX">xCode.no</h1>
   </a>
 
   <a href="contact.html" class="banner">Contact</a>
@@ -22,8 +22,6 @@
   </div>
 
   <script src="js/x.js"></script>
-  <!-- <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script> -->
-
 </body>
 
 </html>
