New form styling v3

--- a/contact.html
+++ b/contact.html
@@ -26,8 +26,7 @@
     <p>
       <label>Message: <textarea name="message"></textarea></label>
     </p>
-    <div class="g-recaptcha" data-sitekey="6Lcg1HwUAAAAAI-RSpRwzR9wStmpQtnVsbKF_u6n">
-    </div>
+    <p><div class="g-recaptcha" data-sitekey="6Lcg1HwUAAAAAI-RSpRwzR9wStmpQtnVsbKF_u6n"></div></p>
     <p>
       <input type="submit" name="submit" value="SEND" />
     </p>
