New form styling v5

--- a/contact.html
+++ b/contact.html
@@ -26,6 +26,7 @@
     <p>
       <label>Message: <textarea name="message"></textarea></label>
     </p>
+    <div data-netlify-recaptcha></div>
     <p>
       <input type="submit" name="submit" value="SEND" />
     </p>
