--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     <h1 id="logoH1" class="animated flipInX">xCode.no</h1>
   </a>
 
-  <a href="contact.html" class="banner">Contact</a>
+  <a href="contact.html" class="banner">Contact v2</a>
 
   <div class="rightTop">
     <p id="dater"></p>
