new favicons. New go logo

--- a/index.html
+++ b/index.html
@@ -5,6 +5,10 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <meta http-equiv="X-UA-Compatible" content="ie=edge" />
+  <link rel="apple-touch-icon" sizes="180x180" href="favicon/apple-touch-icon.png">
+  <link rel="icon" type="image/png" sizes="32x32" href="favicon/favicon-32x32.png">
+  <link rel="icon" type="image/png" sizes="16x16" href="favicon/favicon-16x16.png">
+  <link rel="manifest" href="favicon/site.webmanifest">
   <title>xCode.no</title>
 </head>
 
@@ -180,34 +184,33 @@
     </div>
     <div class="linksContainer">
       <a href="https://maps.xcode.no/" target="_blank" rel="noopener">
-        <img src="Map_converter.png" height="75px" width="75px" class="scale-in-center"
-          alt="Apple to Google Maps" />
+        <img src="img/Map_converter.png" height="75px" width="75px" class="scale-in-center" alt="Apple to Google Maps" />
         Map Converter
       </a>
       <a href="https://ip.xcode.no/" target="_blank" rel="noopener">
-        <img src="Dashboard_perspective_matte.png" height="75px" width="75px" class="scale-in-center"
+        <img src="img/Dashboard_perspective_matte.png" height="75px" width="75px" class="scale-in-center"
           alt="Browser Info" />
         Browser Info
       </a>
       <a href="https://url.xcode.no/" target="_blank" rel="noopener">
-        <img src="Browser_perspective_matte.png" height="75px" width="75px" class="scale-in-center"
+        <img src="img/Browser_perspective_matte.png" height="75px" width="75px" class="scale-in-center"
           alt="Url Shortener" />
         Url Shortener
       </a>
       <a href="https://go.xcode.no/" target="_blank" rel="noopener">
-        <img src="Rocket_perspective_matte.png" height="75px" width="75px" class="scale-in-center" alt="Go | Upload" />
+        <img src="img/go_logo.png" height="75px" width="75px" class="scale-in-center" alt="Go | Upload" />
         Go | Upload
       </a>
       <a href="http://todo.xcode.no/" target="_blank" rel="noopener">
-        <img src="Check_perspective_matte.png" height="75px" width="75px" class="scale-in-center" alt="AvoDo | Todo" />
+        <img src="img/Check_perspective_matte.png" height="75px" width="75px" class="scale-in-center" alt="AvoDo | Todo" />
         AvoDo | Todo
       </a>
       <a href="https://sukkersjekk.xcode.no/" target="_blank" rel="noopener">
-        <img src="Coffee_perspective_matte.png" height="75px" width="75px" class="scale-in-center" alt="Sukkersjekk" />
+        <img src="img/Coffee_perspective_matte.png" height="75px" width="75px" class="scale-in-center" alt="Sukkersjekk" />
         Sukkersjekk
       </a>
       <a href="https://bigwwwave.xcode.no/" target="_blank" rel="noopener">
-        <img src="Add_apps_perspective_matte.png" height="75px" width="75px" class="scale-in-center" alt="Bigwwwave" />
+        <img src="img/Add_apps_perspective_matte.png" height="75px" width="75px" class="scale-in-center" alt="Bigwwwave" />
         Bigwwwave
       </a>
     </div>
