--- a/index.html
+++ b/index.html
@@ -22,10 +22,11 @@
 
     main {
       display: flex;
-      justify-content: center;
+      justify-content: space-evenly;
       flex-direction: column;
       align-items: center;
-      height: 95vh;
+      height: 100%;
+      min-height: 95vh;
     }
 
     h1 {
@@ -46,6 +47,8 @@
     }
 
     .text-pop-up-top {
+      text-align: center;
+      margin-top: 50px;
       -webkit-animation: text-pop-up-top 0.5s cubic-bezier(0.25, 0.46, 0.45, 0.94) both;
       animation: text-pop-up-top 0.5s cubic-bezier(0.25, 0.46, 0.45, 0.94) both;
     }
@@ -54,7 +57,6 @@
       display: flex;
       justify-content: center;
       flex-wrap: wrap;
-      margin-top: 10vh;
     }
 
     a {
@@ -63,7 +65,6 @@
       justify-content: center;
       align-items: center;
       color: #ccc;
-      /*#6e6e6e*/
       margin: 20px 20px;
       text-decoration: none;
       font-weight: lighter;
