--- a/index.html
+++ b/index.html
@@ -20,8 +20,8 @@
       <h2>Projects by <span>Dan Isak Weisser</span></h2>
     </div>
     <div class="linksContainer">
-      <a id="car-loan" href="https://maps.xcode.no/" target="_blank" rel="noopener">
-        <img src="img/car-loan.png" height="223px" width="200px" class="scale-in-center" alt="Apple to Google Maps" />
+      <a id="car-loan" href="https://bil.xcode.no/" target="_blank" rel="noopener">
+        <img src="img/car-loan.png" height="223px" width="200px" class="scale-in-center" alt="Car Loan Calculator" />
         Car<br />Loan<br />Calculator
       </a>
       <a id="browser-info" href="https://ip.xcode.no/" target="_blank" rel="noopener">
