Mobile first styling

--- a/index.html
+++ b/index.html
@@ -15,53 +15,61 @@
 
 <body>
   <main>
-    <div>
-      <h1>xCode</h1>
-      <h2>Projects by <span>Dan Isak Weisser</span></h2>
-    </div>
-    <div class="linksContainer">
-      <a id="car-loan" href="https://bil.xcode.no/" target="_blank" rel="noopener">
-        <img src="img/car-loan.png" height="223px" width="200px" class="scale-in-center" alt="Car Loan Calculator" />
-        Car<br />Loan<br />Calculator
-      </a>
-      <a id="browser-info" href="https://ip.xcode.no/" target="_blank" rel="noopener">
-        <img src="img/info.png" height="410" width="364px" class="scale-in-center" alt="Browser Info" />
-        <div>
-          <p>Check</p>
-          <ul>
-            <li>OS</li>
-            <li>IP-address</li>
-            <li>Screen size</li>
-            <li>Country origin</li>
-            <li>Browser version</li>
-          </span>
-        </div>
-      </a>
-      <a id="url-shortener" href="https://url.xcode.no/" target="_blank" rel="noopener">
-        <img src="img/url.png" height="215px" width="290px" class="scale-in-center"
-          alt="Url Shortener" />
-        Url Shortener
-      </a>
-      <a id="map-converter" href="https://maps.xcode.no/" target="_blank" rel="noopener">
-        <img src="img/map.png" height="192px" width="371px" class="scale-in-center" alt="Apple to Google Maps" />
-        <span>Open Apple<br/>Maps link<br/>in Google<br/> Maps</span>
-      </a>
-      <a id="go-upload" href="https://go.xcode.no/" target="_blank" rel="noopener">
-        <span>Upload<br/>files</span>
-        <img src="img/upload.png" height="241px" width="288px" class="scale-in-center" alt="Go | Upload" />
-      </a>
-      <a id="avo-do" href="http://todo.xcode.no/" target="_blank" rel="noopener">
-        <img src="img/todo.png" height="193px" width="212px" class="scale-in-center" alt="AvoDo | Todo" />
-        TODO APP
-      </a>
-      <a id="sukkersjekk" href="https://sukkersjekk.xcode.no/" target="_blank" rel="noopener">
-        <p>Sukkersjekk<br/><span>Calculate sugar cubes in food</span></p>
-        <img src="img/hand.png" height="286px" width="347px" class="scale-in-center" alt="Sukkersjekk" />
-      </a>
-      <a id="bigwwwave" href="https://bigwwwave.xcode.no/" target="_blank" rel="noopener">
-        <img src="img/mac-bigwwwave.png" height="336px" width="444px" class="scale-in-center" alt="Bigwwwave" />
-        Web agency
-      </a>
+    <div class="container">
+      <div>
+        <h1>xCode</h1>
+        <h2>Projects by <span>Dan Isak Weisser</span></h2>
+      </div>
+      <div class="linksContainer">
+        <a id="car-loan" href="https://bil.xcode.no/" target="_blank" rel="noopener">
+          <img src="img/car-loan.png" height="223px" width="200px" class="scale-in-center" alt="Car Loan Calculator" />
+          <div>
+            Car<br />Loan<br />Calculator
+          </div>
+        </a>
+        <a id="browser-info" href="https://ip.xcode.no/" target="_blank" rel="noopener">
+          <img src="img/info.png" height="410" width="364px" class="scale-in-center" alt="Browser Info" />
+          <div>
+            <p>Check</p>
+            <ul>
+              <li>OS</li>
+              <li>IP-address</li>
+              <li>Screen size</li>
+              <li>Country origin</li>
+              <li>Browser version</li>
+            </span>
+          </div>
+        </a>
+        <a id="url-shortener" href="https://url.xcode.no/" target="_blank" rel="noopener">
+          <img src="img/url.png" height="215px" width="290px" class="scale-in-center"
+            alt="Url Shortener" />
+          <div>
+            Shorten URL's
+          </div>
+        </a>
+        <a id="map-converter" href="https://maps.xcode.no/" target="_blank" rel="noopener">
+          <img src="img/map.png" height="192px" width="371px" class="scale-in-center" alt="Apple to Google Maps" />
+          <div>
+            <span>Open Apple<br />Maps link<br />in Google<br />Maps</span>
+          </div>
+        </a>
+        <a id="go-upload" href="https://go.xcode.no/" target="_blank" rel="noopener">
+          <div><span>Upload<br/>files</span></div>
+          <img src="img/upload.png" height="241px" width="288px" class="scale-in-center" alt="Go | Upload" />
+        </a>
+        <a id="avo-do" href="http://todo.xcode.no/" target="_blank" rel="noopener">
+          <img src="img/todo.png" height="193px" width="212px" class="scale-in-center" alt="AvoDo | Todo" />
+          <div>TODO APP</div>
+        </a>
+        <a id="sukkersjekk" href="https://sukkersjekk.xcode.no/" target="_blank" rel="noopener">
+          <div><p>Sukkersjekk</p><span>Calculate sugar cubes in food</span></div>
+          <img src="img/hand.png" height="286px" width="347px" class="scale-in-center" alt="Sukkersjekk" />
+        </a>
+        <a id="bigwwwave" href="https://bigwwwave.xcode.no/" target="_blank" rel="noopener">
+          <img src="img/mac-bigwwwave.png" height="336px" width="444px" class="scale-in-center" alt="Bigwwwave" />
+          <div>Web agency</div>
+        </a>
+      </div>
     </div>
   </main>
 </body>
