--- a/index.html
+++ b/index.html
@@ -71,8 +71,10 @@
         </a>
       </div>
     </div>
-    <p id="copyright">&copy; <span id="current-year"></span> xCode</p>
   </main>
+  <footer>
+    <p id="copyright">&copy; <span id="current-year"></span> xCode</p>
+  </footer>
 </body>
 <script>
   document.getElementById('current-year').textContent = new Date().getFullYear();
