Added tesla referral card

--- a/index.html
+++ b/index.html
@@ -21,6 +21,12 @@
         <h2>Projects by <span>Dan Isak Weisser</span></h2>
       </div>
       <div class="linksContainer">
+        <a id="tesla" href="https://tesla-referral.xcode.no/" target="_blank" rel="noopener">
+          <img src="img/cybertruck.png" height="227px" width="411px" class="scale-in-center" alt="3D Cybertruck" />
+          <div>
+            Tesla Referral App
+          </div>
+        </a>
         <a id="car-loan" href="https://bil.xcode.no/" target="_blank" rel="noopener">
           <img src="img/car-loan.png" height="223px" width="200px" class="scale-in-center" alt="Car Loan Calculator" />
           <div>
