Add Note Calculator project card and styling

--- a/index.html
+++ b/index.html
@@ -20,8 +20,17 @@
         <h1>xCode</h1>
         <h2>Projects by <span>Dan Isak Weisser</span></h2>
       </div>
-      <div class="linksContainer">
-        <a id="tesla" href="https://tesla-referral.xcode.no/" target="_blank" rel="noopener">
+      <div class="cards">
+        <a id="note-calc" href="https://notecalc.xcode.no" target="_blank" rel="noopener">
+          <div>
+            Note
+          </div>
+          <img src="img/8817310.webp" height="450" width="450px" class="scale-in-center" alt="3D note calculator" />
+          <div>
+            Calculator
+          </div>
+        </a>
+        <a id="tesla" href="https://teslainvite.com" target="_blank" rel="noopener">
           <img src="img/cybertruck.png" height="227px" width="411px" class="scale-in-center" alt="3D Cybertruck" />
           <div>
             Tesla Referral App
