--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
         <h2>Projects by <span>Dan Isak Weisser</span></h2>
       </div>
       <div class="cards">
-        <a id="note-calc" href="https://notecalc.xcode.no" target="_blank" rel="noopener">
+        <a id="note-calc" href="https://notecalc.xcode.no">
           <div>
             Note
           </div>
@@ -30,19 +30,19 @@
             Calculator
           </div>
         </a>
-        <a id="tesla" href="https://teslainvite.com" target="_blank" rel="noopener">
+        <a id="tesla" href="https://teslainvite.com">
           <img src="img/cybertruck.png" height="227px" width="411px" class="scale-in-center" alt="3D Cybertruck" />
           <div>
             Tesla Referral App
           </div>
         </a>
-        <a id="car-loan" href="https://bil.xcode.no/" target="_blank" rel="noopener">
+        <a id="car-loan" href="https://bil.xcode.no/">
           <img src="img/car-loan.png" height="223px" width="200px" class="scale-in-center" alt="Car Loan Calculator" />
           <div>
             Car<br />Loan<br />Calculator
           </div>
         </a>
-        <a id="browser-info" href="https://ip.xcode.no/" target="_blank" rel="noopener">
+        <a id="browser-info" href="https://ip.xcode.no/">
           <img src="img/info.png" height="410" width="364px" class="scale-in-center" alt="Browser Info" />
           <div>
             <p>Check</p>
@@ -55,32 +55,32 @@
             </span>
           </div>
         </a>
-        <a id="url-shortener" href="https://url.xcode.no/" target="_blank" rel="noopener">
+        <a id="url-shortener" href="https://url.xcode.no/">
           <img src="img/url.png" height="215px" width="290px" class="scale-in-center"
             alt="Url Shortener" />
           <div>
             Shorten URL's
           </div>
         </a>
-        <a id="map-converter" href="https://maps.xcode.no/" target="_blank" rel="noopener">
+        <a id="map-converter" href="https://maps.xcode.no/">
           <img src="img/map.png" height="192px" width="371px" class="scale-in-center" alt="Apple to Google Maps" />
           <div>
             <span>Open Apple<br />Maps link<br />in Google<br />Maps</span>
           </div>
         </a>
-        <a id="go-upload" href="https://go.xcode.no/" target="_blank" rel="noopener">
+        <a id="go-upload" href="https://go.xcode.no/">
           <div><span>Upload<br/>files</span></div>
           <img src="img/upload.png" height="241px" width="288px" class="scale-in-center" alt="Go | Upload" />
         </a>
-        <a id="avo-do" href="http://todo.xcode.no/" target="_blank" rel="noopener">
+        <a id="avo-do" href="http://todo.xcode.no/">
           <img src="img/todo.png" height="193px" width="212px" class="scale-in-center" alt="AvoDo | Todo" />
           <div>TODO APP</div>
         </a>
-        <a id="sukkersjekk" href="https://sukkersjekk.xcode.no/" target="_blank" rel="noopener">
+        <a id="sukkersjekk" href="https://sukkersjekk.xcode.no/">
           <div><p>Sukkersjekk</p><span>Calculate sugar cubes in food</span></div>
           <img src="img/hand.png" height="286px" width="347px" class="scale-in-center" alt="Sukkersjekk" />
         </a>
-        <a id="bigwwwave" href="https://bigwwwave.xcode.no/" target="_blank" rel="noopener">
+        <a id="bigwwwave" href="https://bigwwwave.xcode.no/">
           <img src="img/mac-bigwwwave.png" height="336px" width="444px" class="scale-in-center" alt="Bigwwwave" />
           <div>Web agency</div>
         </a>
