Add background div and adjust layout styling
- Added background div to index.html
- Updated body and main CSS for full-height layout
- Adjusted header, footer, and mobile responsive styles
- Fine-tuned margins and line heights

--- a/index.html
+++ b/index.html
@@ -87,6 +87,7 @@
       </div>
     </div>
   </main>
+  <div class="background"></div>
   <footer>
     <p id="copyright">&copy; <span id="current-year"></span> xCode</p>
   </footer>
